Minor fix to build.xml. More work on schema alignment dialog: add another dialog for configuring a protograph node.
git-svn-id: http://google-refine.googlecode.com/svn/trunk@84 7d457c2a-affb-35e4-300a-418c747d4874

--- a/src/main/webapp/styles/schema-alignment-dialog.css
+++ b/src/main/webapp/styles/schema-alignment-dialog.css
@@ -63,3 +63,13 @@ a.schema-alignment-link-tag {
 a.schema-alignment-link-tag:hover {
     color: #88f;
 }
+
+.schema-alignment-node-dialog-column-list {
+    height: 300px;
+    overflow: auto;
+    border: 1px solid #aaa;
+    padding: 2px;
+}
+.schema-alignment-node-dialog-column-choice {
+    margin: 5px;
+}
